# adobe-contract-checks

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_docker.md  gcovr.cfg
.devcontainer/: .dockerignore
.github/: constants.env
.github/template/: README.md
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  template-janitor.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/adobe/: contract_checks.hpp
src/: CMakeLists.txt
src/sample_library/: CMakeLists.txt
test/: CMakeLists.txt  abort_detection.cpp  abort_is_detected.cpp  aborts.cpp  constexpr_tests.cpp  custom_lightweight_configuration_tests.cpp  custom_verbose_configuration_tests.cpp  default_handler_tests.cpp  inadequate_arity_checking_tests.cpp  inline_handler_assurance.cpp  lightweight_configuration_tests.cpp  macro_utilities.hpp  minimal_configuration.hpp  minimal_configuration_tests.cpp  misconfiguration_test.cpp  no_external_linkage_assurance.cpp  portable_death_tests.hpp  precondition_failure.cpp  precondition_failure_aborts.cpp  precondition_failure_minimal.cpp  precondition_failure_output.cpp  precondition_failure_with_message_output.cpp  precondition_tests.cpp  throwing_tests.cpp  too_few_arguments_test.cpp  too_many_arguments_test.cpp  unsafe_configuration_tests.cpp  verbose_configuration_tests.cpp  win32_abort_detection.cpp
